<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.5</version>
        <relativePath/>
    </parent>

    <groupId>site.asm0dey.slidev.polls</groupId>
    <artifactId>slidev-polls-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>slidev-polls-parent</name>
    <description>Slidev Polls — reactor parent</description>

    <modules>
        <module>backend</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.release>25</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>site.asm0dey.slidev.polls</groupId>
                <artifactId>poll-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>site.asm0dey.slidev.polls</groupId>
                <artifactId>poll-persistence</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>site.asm0dey.slidev.polls</groupId>
                <artifactId>poll-realtime</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.zxing</groupId>
                <artifactId>core</artifactId>
                <version>3.5.3</version>
            </dependency>
            <dependency>
                <groupId>com.google.zxing</groupId>
                <artifactId>javase</artifactId>
                <version>3.5.3</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>2.46.1</version>
                    <configuration>
                        <java>
                            <googleJavaFormat>
                                <version>1.28.0</version>
                                <style>GOOGLE</style>
                                <reflowLongStrings>true</reflowLongStrings>
                            </googleJavaFormat>
                            <removeUnusedImports/>
                            <formatAnnotations/>
                        </java>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>check</goal>
                            </goals>
                            <phase>verify</phase>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!--
              Bind failsafe to integration-test / verify so Maven's standard
              `*IT.java` naming convention (PollAuthoringIT, OneActivePerPollIT,
              StreamIT, …) actually runs. Spring Boot's parent POM only manages
              the version; execution binding has to live here. Kept at reactor
              root so every module inherits the same contract without per-
              module duplication.
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-it</id>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
